classDiagram
Page o-- TmptHub
Page *-- PageMeta
Page *-- PageGeneralInfo
TmptPOOL o-- TmptHub
Page *-- TmptPOOL
Page *-- CmptNodeTREE


CmptNodeTREE *-- CmptNodePOOL
CmptNodePOOL o-- CmptNode
CmptNodePOOL o-- CmptNode


CmptNode o-- Cmpt

Cmpt o-- Tmpt

Tmpt *-- TmptHook
Tmpt *-- TmptHook
Tmpt *-- TmptStyle
Tmpt *-- TmptStyleConfig

Cmpt *-- CmptStyle
Cmpt *-- CmptStyleConfig


Cmpt *-- CmptHook
Cmpt *-- CmptHook
Cmpt *-- AttachedAt

CmptHook *-- AttachedTo
CmptHook *-- CmptHookStyleConfig
CmptHook *-- CmptHookStyle


CmptNode o-- CmptAttachment
CmptAttachment o-- CmptHook__2
CmptAttachment o-- Cmpt__2


CmptNode o-- CmptHookAttachment
CmptNode o-- CmptHookAttachment

CmptHookAttachment o-- Cmpt__3


class TmptHub {
   Mother = User
}

class Page {
   Mother = App
}

class CmptNode {
   Mother = Page
}

class Cmpt {
   Mother = Page
}

class CmptAttachment {
   Mother = CmptNode::static
}

class CmptHookAttachment {
   Mother = CmptNode::static
}

class Tmpt {
   Mother = TmptHub
}



